--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Natokung</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body style="background-color: lightgreen;">
     <h1 id="websitetitle">CAT SO CUTE</h1>
     <h1>Past</h1>
     <div class="masrt"></div>
