--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         <span class="theFirst">K</span>ing of the world is cats.
     </p>
     <img src="monster-hunter-world-patch-xbox-one-ps4-740x504.png" alt="">
-    <a href="www.google.com">common</a>
+    <a href="https://onlearn.it.kmitl.ac.th/">common</a>
 </body>
-</html> 
+</html> x
