--- a/index.html
+++ b/index.html
@@ -22,4 +22,4 @@
     <img src="monster-hunter-world-patch-xbox-one-ps4-740x504.png" alt="">
     <a href="https://onlearn.it.kmitl.ac.th/">common</a>
 </body>
-</html> x
+</html>
