--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         King of the world is cats.
     </p>
     <p id="first">
-        teemmmmmmmmmmmmmmmmmmmmm
+        แมวน่ารัก
     </p>
     <p id="teem">
         <span class="theFirst">K</span>ing of the world is cats.
     </p>
-    <img src="monster-hunter-world-patch-xbox-one-ps4-740x504.png" alt="">
+    <img src="red-white-cat-i-white-studio_155003-13189.avif" alt="">
     <a href="https://onlearn.it.kmitl.ac.th/">common</a>
 </body>
 </html>
