--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body style="background-color: lightgreen;">
     <h1 id="websitetitle">CAT SO CUTE</h1>
     <h1>Past</h1>
-    <div class="masrt"></div>
-    <p class="redText">
+    <div class="masrt">
+        <p class="redText">
         King of the world is cats.
     </p>
     <p id="first">
@@ -21,5 +21,7 @@
     </p>
     <img src="red-white-cat-i-white-studio_155003-13189.avif" alt="">
     <a href="https://onlearn.it.kmitl.ac.th/">common</a>
+    </div>
+    
 </body>
 </html>
